# RoboticsStudio1

./: README.md  ReachGoal  hail_localiser  scan_matching_localizer_tejas  sprint_2_localiser  tejasWarehouse  turtlebot3_image_subscriber
Projects/Lidar/: CMakeLists.txt  package.xml
Projects/Lidar/src/: point_cloud_node.cpp  three_d_model_node.cpp
Projects/ReachGoal/: CMakeLists.txt  commands.txt
Projects/ReachGoal/src/: GOALS.txt  goal_executor.cpp  goal_publisher.cpp
Projects/Week0/: CMakeLists.txt
Projects/Week1/: CMakeLists.txt  package.xml
Projects/Week1/src/: image_subscriber_node.cpp  teleop_node.cpp
Sprint1/: CMakeLists.txt  S1.txt
Sprint1/World/: S1World.py  Sprint1World.py
Sprint1/src/: laser_scan_filter_node.cpp  laser_scan_filter_node.h  laser_scan_visualizer_node.cpp  main.cpp
Sprint2/: mapjd.pgm  mapjd.yaml  my_map.pgm  my_map.yaml  sprint2_commands.txt  test_map.pgm  test_map.yaml
autonomous_robot/: CMakeLists.txt  workflow.txt
autonomous_robot/install/: local_setup.sh  setup.sh
autonomous_robot/log/: latest_build
autonomous_robot/map/: map.pgm  map.yaml
autonomous_robot/scripts/: goals.json
autonomous_robot/src/: autonomous_mapping.cpp  autonomous_mapping.hpp  localizer_and_navigation.cpp
autonomous_robot/stocktake/: Stocktake_Report.txt
autonomous_turtlebot3/: CMakeLists.txt  package.xml
autonomous_turtlebot3/src/: autonomous_mapping.cpp  autonomous_mapping_main.cpp  localizer_and_navigation.hpp  localizer_and_navigation_main.cpp
cylinder_navigation/: workflow.txt
cylinder_navigator/: CMakeLists.txt  package.xml
cylinder_navigator/launch/: sprint_4_launch.py
cylinder_navigator/src/: circum_navigation.cpp  goal_publisher.cpp
install/laser_scan_filter/lib/laser_scan_filter/: laser_scan_filter_node  laser_scan_visualizer_node
install/laser_scan_filter/share/laser_scan_filter/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/laser_scan_to_image/lib/laser_scan_to_image/: scan_matching_localizer
install/laser_scan_to_image/share/laser_scan_to_image/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/localization/share/localization/: package.sh
install/move_turtlebot/lib/move_turtlebot/: move_robot_node
install/move_turtlebot/share/move_turtlebot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/path_planner/share/path_planner/: package.sh  package.xml
install/s2_localizer/share/s2_localizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/s2_localizer/share/s2_localizer/cmake/: s2_localizerConfig.cmake
install/s2_localizer/share/s2_localizer/launch/: localization.launch.py
install/scamazon_navigation/share/scamazon_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scan_matching_localizer_tejas/share/scan_matching_localizer_tejas/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_localizer/lib/simple_localizer/: scan_matching_localiser
install/simple_localizer/share/simple_localizer/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sml_graph/lib/sml_graph/: yaw_listener
install/sml_graph/share/sml_graph/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sprint_2_localiser/lib/sprint_2_localiser/: scan_matching_localiser
install/sprint_2_localiser/share/sprint_2_localiser/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sprint_2_localiser/share/sprint_2_localiser/cmake/: sprint_2_localiserConfig.cmake
install/turtlebot3_goal_sender/lib/turtlebot3_goal_sender/: goal_publisher
install/turtlebot3_goal_sender/share/turtlebot3_goal_sender/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_image_processing/lib/turtlebot3_image_processing/: image_processor
install/turtlebot3_image_processing/share/turtlebot3_image_processing/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_image_subscriber/lib/turtlebot3_image_subscriber/: image_subscriber_node  teleop_node
install/turtlebot3_image_subscriber/share/turtlebot3_image_subscriber/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_navigation/lib/turtlebot3_navigation/: goal_publisher  navigation_launcher
install/turtlebot3_navigation/share/turtlebot3_navigation/: package.sh  package.xml
install/turtlebot3_perception/lib/turtlebot3_perception/: laser_scan_processor
install/turtlebot3_perception/share/turtlebot3_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
install/turtlesim/share/turtlesim/: package.sh
install/warehouse_navigation/share/warehouse_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
laser_scan_to_image/: CMakeLists.txt
laser_scan_to_image/src/: scan_matching_localizer.cpp
log/: latest_build
map_comparator/src/: show_current_map.cpp
move_turtlebot/: CMakeLists.txt  package.xml
move_turtlebot/src/: move_robot_node.cpp
path_planner/: setup.py
s2_localizer/: CMakeLists.txt
s2_localizer/src/: rviz_config.rviz
scamazon_navigation/src/: reach_goals.cpp
sprint3/: sprint3_commands.txt
sprint3/src/: filter_cylinder.cpp
stop_navigation/: CMakeLists.txt  package.xml
stop_navigation/src/: stop_navigation_node.cpp
test_pgm_circle/: CMakeLists.txt
test_pgm_circle/src/: test_circle.cpp
turtlebot3_image_processing/: CMakeLists.txt  commands.txt
turtlebot3_image_processing/src/: image_processor.cpp
turtlebot3_navigation/: CMakeLists.txt
turtlebot3_navigation/config/: GOALS.txt  map.pgm  map.yaml
turtlebot3_navigation/src/: commands.txt  goal_publisher.cpp  navigation_launcher.cpp
turtlebot3_perception/: CMakeLists.txt
turtlebot3_perception/src/: laser_scan_processor.cpp
(+7 files in other folders)
