<package format="3">
  <name>autonomous_turtlebot3</name>
  <version>0.0.1</version>
  <description>Autonomous Robot that performs SLAM, Localization, and Navigation</description>
  <maintainer email="jarred.g.deluca@student.uts.edu.au">Jarred Deluca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rtabmap_ros</depend>
  <depend>std_srvs</depend>

</package>
