<?xml version="1.0"?>
<package format="3">
  <name>cylinder_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jarred.g.deluca@student.uts.edu.au">student</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>  <!-- Added dependency for action client -->
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
