<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_image_subscriber</name>
  <version>0.0.1</version>
  <description>The turtlebot3_image_subscriber package</description>

  <maintainer email="jarred.g.deluca@student.uts.edu.au">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
